--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Cookie-Stand</title>
-    <script src="./js/app.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" rel="stylesheet">
 
-</head>
+</head>Salmon Cookies
+<body>
+
+  <header>
+
+    <img id="salmon" scr="salmon.png" alt="salmon">
+        welcome to our site
+  </header>
+  <div>
+
+  </div>
+  <main>
+    <p> we are a salmon based cookie company
+<ul id="city-holder">
+  <li id="hours"></li>
+
+</ul>
+    </p>
+  </main>
+  <br>
+  <footer>
+
+  </footer>
+  
+  <script src="./js/app.js"></script>
+</body>
