added more hours elements to test

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Cookie-Stand</title>
-    <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" 
+    rel="stylesheet">
 
 </head>Salmon Cookies
 <body>
 
   <header>
 
-    <img id="salmon" scr="salmon.png" alt="salmon">
-        welcome to our site
+    <img id="salmon" scr="salmon.png"
+     alt="salmon">
+        <h1 style="background-color: rgb(114, 114, 209) ;"></h1>      welcome to our site
   </header>
   <div>
 
