--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,29 +8,46 @@
     <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" 
     rel="stylesheet">
 
-</head>Salmon Cookies
+</head>
 <body>
+  <table>
+    <tbody>
+        <thead>
+         <tr>
+          <td>Hours</td>
+          <td>location</td>
+          <td>contact info</td>
+         </tr>
+        </thead>
+    <tr>
+      <td>8am-5pm</td>
+      <td>seattle</td>
+      <td>555-5555</td>
+    </tr>
+  </tbody>
+  </table id="animal-table">
+  <tr>
+    <td></td>
+  </tr>
 
   <header>
+    <h1> Salmon Cookies </h1>
 
-    <img id="salmon" scr="salmon.png"
+    <img id="salmon" src="salmon.png"
      alt="salmon">
-        <h1 style="background-color: rgb(114, 114, 209) ;"></h1>      welcome to our site
+        <h1 style="background-color: rgb(53, 53, 139) ;"></h1>      welcome to our site
   </header>
   <div>
-
-  </div>
   <main>
     <p> we are a salmon based cookie company
-<ul id="city-holder">
+      <ul id="city-holder">
 
-</ul>
+      </ul>
     </p>
   </main>
-  <br>
+   <br>
   <footer>
-
   </footer>
-  
-  <script src="./js/app.js"></script>
+   <script src="./js/app.js"></script>
 </body>
+</html>
