--- a/index.html
+++ b/index.html
@@ -10,22 +10,34 @@
 
 </head>
 <body>
-  <table>
+  <table id="city-table">
     <tbody>
         <thead>
-         <tr>
-          <td>Hours</td>
-          <td>location</td>
-          <td>contact info</td>
-         </tr>
+            <tr>
+                <tr>6am</tr>
+                <td>7am</td>
+                <td>8am</td>
+                <td>9am</td>
+                <td>10am</td>
+                <td>11am</td>
+                <td>12pm</td>
+                <td>1pm</td>
+                <td>2pm</td>
+                <td>3pm</td>
+                <td>4pm</td>
+                <td>5pm</td>
+                <td>6pm</td>
+                <td>7pm</td>
+                <td>8pm</td>
+            </tr>
         </thead>
     <tr>
-      <td>8am-5pm</td>
-      <td>seattle</td>
-      <td>555-5555</td>
+            <td></td>
+            <td></td>
+
     </tr>
   </tbody>
-  </table id="animal-table">
+  </table>
   <tr>
     <td></td>
   </tr>
