more added to js

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
 </head>
 <body>
-  <table id="city-table">
-    <tbody>
+  <table >
         <thead>
             <tr>
-                <tr>6am</tr>
+                <td>6am</td>
                 <td>7am</td>
                 <td>8am</td>
                 <td>9am</td>
@@ -31,12 +30,8 @@
                 <td>8pm</td>
             </tr>
         </thead>
-    <tr>
-            <td></td>
-            <td></td>
-
-    </tr>
-  </tbody>
+        <tbody id="city-table">
+ </tbody>
   </table>
   <tr>
     <td></td>
