--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <td>5pm</td>
                 <td>6pm</td>
                 <td>7pm</td>
-                <td>8pm</td>
+                <td>Total</td>
             </tr>
         </thead>
         <tbody id="city-table">
