trying to get totals for each time

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 </head>
 <body>
+   <img id="salmon" src="salmon.png"
+  alt="salmon">
   <table >
         <thead>
             <tr>
+                <td></td>
                 <td>6am</td>
                 <td>7am</td>
                 <td>8am</td>
@@ -32,7 +35,20 @@
         </thead>
         <tbody id="city-table">
  </tbody>
+ <div>
   </table>
+  <form id="new pets">
+    <fieldset>
+      <legend style="align-content: center;">Add new animal to shelter</legend>
+    <label for="breed">breed</label>
+    <input id="breed" type="number" />
+    <label for="">weight</label>
+    <input id="" type="number"/>
+    <label>disposition</label>
+    <input />
+    <button style="color: blue;">add the animal</button>
+    </fieldset>
+  </form>
   <tr>
     <td></td>
   </tr>
@@ -40,8 +56,7 @@
   <header>
     <h1> Salmon Cookies </h1>
 
-    <img id="salmon" src="salmon.png"
-     alt="salmon">
+   
         <h1 style="background-color: rgb(53, 53, 139) ;"></h1>      welcome to our site
   </header>
   <div>
