--- a/sales.html
+++ b/sales.html
@@ -1,33 +1,56 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
-  <title>Cookie-Stand</title>
-  <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" rel="stylesheet">
+   
 
-</head>Salmon Cookies
-
+</head>
 <body>
+    <table >
+        <thead>
+            <tr>
+                <td></td>
+                <td>6am</td>
+                <td>7am</td>
+                <td>8am</td>
+                <td>9am</td>
+                <td>10am</td>
+                <td>11am</td>
+                <td>12pm</td>
+                <td>1pm</td>
+                <td>2pm</td>
+                <td>3pm</td>
+                <td>4pm</td>
+                <td>5pm</td>
+                <td>6pm</td>
+                <td>7pm</td>
+                <td>Total</td>
+            </tr>
+        </thead>
+        <tbody id="city-table">
+        </tbody>
+ <div>
+  </table>
+   
+  
+  
+  
 
   <header>
-
-    <img id="salmon" scr="salmon.png" alt="salmon">
-    <h1 style="background-color: rgb(114, 114, 209) ;"></h1> welcome to our site
+    
+        
   </header>
-  <div>
-
-  </div>
+ 
   <main>
-    <p>
-      <ul id="city-holder">
+   
+      <ul>
 
       </ul>
     </p>
   </main>
-  <br>
+   <br>
   <footer>
-
   </footer>
-  <script src="./js/app.js"></script>
+   <script src="./js/app.js"></script>
 </body>
+</html>
