trying to fix and call the bottom button addition rows

--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
         </tbody>
  <div>
   </table>
-  <form id="new pets">
+  <form id="New-Location">
     <fieldset>
-      <legend style="align-content: center;">Add new animal to shelter</legend>
-    <label for="breed">breed</label>
-    <input id="breed" type="number" />
-    <label for="">weight</label>
-    <input id="" type="number"/>
-    <label>disposition</label>
-    <input />
-    <button style="color: blue;">add the animal</button>
+      <legend style="align-content: center;"></legend>
+        <label for="City">City</label>
+        <input id="City" type="" />
+        <label for="Minimum Customers">Minimum Customers</label>
+        <input id="Minimum Customers" type="number"/>
+        <label for="Max Customers">Max Customers</label>
+        <input id="Max Customers" type="number"/>
+        <label for="Average Customers">Average Customers</label>
+        <input id="Average Customers" type="number"/>
+        <button style="color: blue;">Submit</button>
     </fieldset>
   </form>
   <tr>
