--- a/index.html
+++ b/index.html
@@ -2,76 +2,27 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>Cookie-Stand</title>
-    <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" 
-    rel="stylesheet">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <title>Cookie-Stand</title>
+  <link href="https://fonts.googleapis.com/css?family=Freckle+Face&display=swap" rel="stylesheet">
 
 </head>
-<body>
-   <img id="salmon" src="salmon.png"
-  alt="salmon">
-  <table >
-        <thead>
-            <tr>
-                <td></td>
-                <td>6am</td>
-                <td>7am</td>
-                <td>8am</td>
-                <td>9am</td>
-                <td>10am</td>
-                <td>11am</td>
-                <td>12pm</td>
-                <td>1pm</td>
-                <td>2pm</td>
-                <td>3pm</td>
-                <td>4pm</td>
-                <td>5pm</td>
-                <td>6pm</td>
-                <td>7pm</td>
-                <td>Total</td>
-            </tr>
-        </thead>
-        <tbody id="city-table">
-        </tbody>
- <div>
-  </table>
-  <form id="New-Location">
-    <fieldset>
-      <legend style="align-content: center;"></legend>
-        <label for="City">City</label>
-        <input id="City" type="" />
-        <label for="Minimum Customers">Minimum Customers</label>
-        <input id="Minimum Customers" type="number"/>
-        <label for="Max Customers">Max Customers</label>
-        <input id="Max Customers" type="number"/>
-        <label for="Average Customers">Average Customers</label>
-        <input id="Average Customers" type="number"/>
-        <button style="color: blue;">Submit</button>
-    </fieldset>
-  </form>
-  <tr>
-    <td></td>
-  </tr>
 
+<body>
+  <img id="salmon" src="salmon.png" alt="salmon">
+  <img src="chinoo.jpg">
+  <img src="cutter.jpg">
+  <img src="family.jpg">
+  <img src="fish.jpg'>
+  <img src="salmon.jpg">
+  <img src="frosted-cookie.jpg">
+  <img src="shirt.jpg">
+ 
   <header>
     <h1> Salmon Cookies </h1>
 
-   
-        <h1 style="background-color: rgb(53, 53, 139) ;"></h1>      welcome to our site
+    <h1 style="background-color: rgb(53, 53, 139) ;"></h1> 
   </header>
   <div>
-  <main>
-    <p> we are a salmon based cookie company
-      <ul id="city-holder">
-
-      </ul>
-    </p>
-  </main>
-   <br>
-  <footer>
-  </footer>
-   <script src="./js/app.js"></script>
-</body>
-</html>
+    <main>
