--- a/index.html
+++ b/index.html
@@ -10,19 +10,49 @@
 </head>
 
 <body>
+
+  <p></p>
   <img id="salmon" src="salmon.png" alt="salmon">
   <img src="chinoo.jpg">
   <img src="cutter.jpg">
   <img src="family.jpg">
-  <img src="fish.jpg'>
+  <img src="fish.jpg">
   <img src="salmon.jpg">
   <img src="frosted-cookie.jpg">
   <img src="shirt.jpg">
- 
+
   <header>
     <h1> Salmon Cookies </h1>
 
-    <h1 style="background-color: rgb(53, 53, 139) ;"></h1> 
+    <h1 style="background-color: rgb(53, 53, 139) ;"></h1>
   </header>
   <div>
     <main>
+      <h1>Store Locations</h1>
+      <ul>
+        1881 Conifer Drive, Seattle WA 98121
+      </ul>
+        <li>Phone Number: 425-477-0697</li>
+        <li>Open 6am - 7pm, Mon-Fri</li>
+      <ul>
+        トウキョウト, シンジュクク, ニシシンジュクシンジュクパークタワー(41カイ), 119-1189(119-1189, Nishishinjuku Shinjuku Pakutawa(41-kai),
+        Shinjuku-ku, Tokyo)
+      </ul>
+        <li>Phone Number: +8154-245-4922</li>
+        <li>Open 6am - 7pm, Mon-Fri</li>
+      <ul> 
+        Burj Khalifa, 1 Sheikh Mohammed bin Rashid Blvd - Dubai - United Arab Emirates
+      </ul>
+        <li>Phoe Number: +o5-2822999</li>
+       <li>Open 6am - 7pm, Mon-Fri</li>
+      <ul>
+        142 rue La Boétie, Paris Île-de-France 75013
+      </ul>
+        <li>Phone Number: 01.59.52.06840</li>
+        <li>Open 6am - 7pm, Mon-Fri</li>
+
+      <ul>
+        Avenida República De Panamá, 5101 Surquillo Lima
+      </ul>
+        <li>Phone Number: (01)719-0140</li>
+        <li>Open 6am - 7pm, Mon-Fri</li>
