--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@
 
 <body>
 
-  <p></p>
-  <img id="salmon" src="salmon.png" alt="salmon">
-  <img src="chinoo.jpg">
-  <img src="cutter.jpg">
-  <img src="family.jpg">
-  <img src="fish.jpg">
-  <img src="salmon.jpg">
-  <img src="frosted-cookie.jpg">
-  <img src="shirt.jpg">
-
   <header>
     <h1> Salmon Cookies </h1>
 
@@ -56,3 +46,14 @@
       </ul>
         <li>Phone Number: (01)719-0140</li>
         <li>Open 6am - 7pm, Mon-Fri</li>
+        
+  <div>
+    <img id="salmon" src="salmon.png" alt="salmon">
+    <img id="chinook" src="chinook.jpg" >
+    <img src="cutter.jpg">
+    <img src="family.jpg">
+    <img src="fish.jpg">
+    <img src="salmon.jpg">
+    <img src="frosted-cookie.jpg">
+    <img src="shirt.jpg">
+  </div>
